------------------------------------------------------------------------
r2452 | gaser | 2023-08-08 11:05:49

Changed paths:
 M CHANGES.txt
A  mexmaca/@file_array/private/file2mat.mex
A  mexmaca/@file_array/private/init.mex
A  mexmaca/@file_array/private/mat2file.mex
A  mexmaca/@gifti/private/zstream.mex
A  mexmaca/@xmltree/private/xml_findstr.mex
A  mexmaca/spm_add.mex
A  mexmaca/spm_brainwarp.mex
A  mexmaca/spm_bsplinc.mex
A  mexmaca/spm_bsplins.mex
A  mexmaca/spm_bwlabel.mex
A  mexmaca/spm_cat.mex
A  mexmaca/spm_conv_vol.mex
A  mexmaca/spm_diffeo.mex
A  mexmaca/spm_dilate_erode.mex
A  mexmaca/spm_existfile.mex
A  mexmaca/spm_field.mex
A  mexmaca/spm_gamrnd.mex
A  mexmaca/spm_get_lm.mex
A  mexmaca/spm_global.mex
A  mexmaca/spm_gmmlib.mex
A  mexmaca/spm_hist.mex
A  mexmaca/spm_hist2.mex
A  mexmaca/spm_jsonread.mex
A  mexmaca/spm_krutil.mex
A  mexmaca/spm_mesh_geodesic.mex
A  mexmaca/spm_mesh_reduce.mex
A  mexmaca/spm_mesh_utils.mex
A  mexmaca/spm_mrf.mex
A  mexmaca/spm_project.mex
A  mexmaca/spm_render_vol.mex
A  mexmaca/spm_resels_vol.mex
A  mexmaca/spm_sample_vol.mex
A  mexmaca/spm_slice_vol.mex
A  mexmaca/spm_unlink.mex
A  mexmaca/spm_voronoi.mex

Added: Added some missing mex-files for Octave for Apple Silicon.
------------------------------------------------------------------------
r2449 | gaser | 2023-08-08 10:58:44

Changed paths:
 M CHANGES.txt
 M Makefile
 M cat_conf_factorial.m
 M cat_io_report.m
 M cat_main_reportfig.m
 M cat_run.m
 M cat_spm_results_ui.m
 M cat_stat_spm.m
 M cat_surf_createCS3.m
 M cat_surf_renderv.m
 D mexmaci/@file_array/Contents.m
 D mexmaci/@file_array/cat.m
 D mexmaci/@file_array/ctranspose.m
 D mexmaci/@file_array/disp.m
 D mexmaci/@file_array/display.m
 D mexmaci/@file_array/double.m
 D mexmaci/@file_array/end.m
 D mexmaci/@file_array/fieldnames.m
 D mexmaci/@file_array/file_array.m
 D mexmaci/@file_array/full.m
 D mexmaci/@file_array/horzcat.m
 D mexmaci/@file_array/initialise.m
 D mexmaci/@file_array/isnan.m